Revert "Cleanup"
This reverts commit 462a2903802b1ce200e6f0ceee86c638e9588cba.